--- a/magest/css/style.css
+++ b/magest/css/style.css
@@ -66,16 +66,35 @@ header h1 a:hover {
   padding-top: 80px;
   padding-bottom: 80px;
 }
+.info-block_name {
+  text-align: center;
+  display: block;
+}
 .info-block_image img {
   max-width: 350px;
   max-height: 300px;
 }
 .info-block_form {
   padding-left: 20px;
+  padding-right: 20px;
 }
 .info-block_form input {
   display: block;
   margin-bottom: 20px;
+}
+.info-block_form button {
+  height: 50px;
+  display: block;
+}
+.info-block_form select {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.button_change {
+  height: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .userlist {
