--- a/magest/sass/style.sass
+++ b/magest/sass/style.sass
@@ -48,15 +48,29 @@ header
 	justify-content: center
 	padding-top: 80px
 	padding-bottom: 80px
+	&_name
+		text-align: center
+		display: block
 	&_image
 		& img
 			max-width: 350px
 			max-height: 300px
 	&_form
 		padding-left: 20px
+		padding-right: 20px
 		& input
 			display: block
 			margin-bottom: 20px
+		& button
+			height: 50px
+			display: block
+		& select
+			display: block
+			margin-bottom: 20px	
+.button_change
+	height: 50px
+	padding-left: 20px
+	padding-right: 20px	
 .userlist
 	border: 1px solid black
 	font-size: 24px
